Add magnetic hover + scroll reveal classes

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/tanishshriyan" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/tanishshriyan" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
-                    <a href="mailto:your.email@example.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:tanishshriyan1@outlook.com" class="social-icon"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
             <div class="hero-image">
