Add real email: tanishshriyan1@outlook.com + GitHub links

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>Email</h4>
-                                <a href="mailto:your.email@example.com">your.email@example.com</a>
+                                <a href="mailto:tanishshriyan1@outlook.com">tanishshriyan1@outlook.com</a>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -382,7 +382,7 @@
                 <div class="footer-social">
                     <a href="https://www.linkedin.com/in/tanishshriyan" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/tanishshriyan" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="mailto:your.email@example.com"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:tanishshriyan1@outlook.com"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </div>
