changed index.html made some seo optimisation

--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanish Shriyan | Cybersecurity & ML Developer</title>
+   <title>Tanish Shriyan | AI & Cybersecurity Engineer | Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Tanish Shriyan",
+  "url": "https://tanishshriyan.in",
+  "sameAs": [
+    "https://www.linkedin.com/in/tanishshriyan/",
+    "https://github.com/tanishshriyan"
+  ]
+}
+</script>
+<meta name="description" content="Tanish Shriyan - AI & Cybersecurity Engineer. Creator of Real-Time AI-Powered Ransomware Detection System using Behavioral Fingerprinting. Explore projects, skills, and research work.">
+
+
 </head>
 <body>
 <!-- UPGRADED LOADING SCREEN - Replace the existing one before </body> -->
