made resposive to mobile interface

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 </p>
                 <p>
                     Currently developing an advanced <strong>Ransomware Detection System</strong> using
-                    machine learning algorithms (LightGBM & Isolation Forest) to identify malicious
+                    machine learning algorithms (LightGBM) to identify malicious
                     behavior in real-time. My project combines system monitoring, behavioral analysis,
                     and intelligent threat detection.
                 </p>
